--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         <!--The tr element represents a row of cells in a table.-->
         <td>
           <!--The td element represents a data cell in a table-->
-          <img src="" alt="Atharv's personal pic" /><!--to insert image-->
+          <img src="atharv.jpg" alt="Atharv's personal pic" /><!--to insert image-->
         </td>
         <td>
           <h1>Atharv Deshpande</h1>
